[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Guards/Guard.png" type="Texture" id=1]
[ext_resource path="res://Src/Guard/Guard.gd" type="Script" id=2]
[ext_resource path="res://Src/Notifier/Notifier.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Button/PressureArea.gd" type="Script" id=4]
[ext_resource path="res://Src/Guard/GuardCivilianDetect.gd" type="Script" id=5]
[ext_resource path="res://Src/Player/GroundDetection.gd" type="Script" id=6]
[ext_resource path="res://Assets/SFX/chair_startle.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/sfx_footstep_new3.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/sfx_footstep_new1.wav" type="AudioStream" id=9]
[ext_resource path="res://Src/Guard/AudioListener.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Fonts/NewHudSmall.tres" type="DynamicFont" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.98376, 1.81699 )

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "carry"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=5]
resource_name = "drop"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 18 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 14, 13, 16, 0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 13, 14, 15, 13, 14, 15, 13, 14, 16, 17, 18 ]
}

[sub_resource type="Animation" id=10]
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Guard/Footstep1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Guard/Footstep2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 1.55427, 0.230757 )

[node name="Guard" type="KinematicBody2D" groups=[
"Draggable",
"Guard",
]]
z_index = 54
collision_layer = 48
collision_mask = 0
script = ExtResource( 2 )
normal_time_to_alarm = 1.0
extended_time_to_alarm = 1.4
playerSuspectDistance = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="SureDetectionTimer" type="Timer" parent="."]
one_shot = true

[node name="StunDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GoBackToNormalTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GoBackToNormalAfterDetectTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Flippable" type="Node2D" parent="."]

[node name="GuardArea" type="Area2D" parent="Flippable"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Flippable/GuardArea"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Flippable"]
light_mask = 3
z_index = 53
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 21
frame = 1

[node name="LineOfSight" type="Area2D" parent="Flippable"]
position = Vector2( 11.0983, -22.2613 )
collision_layer = 33
collision_mask = 1057

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Flippable/LineOfSight"]
position = Vector2( 6.30397, 24.2768 )
polygon = PoolVector2Array( -17.4023, -34.0155, 86.5977, -34.0155, 86.5977, -2.0155, -17.4023, -2.0155 )

[node name="LOSRay" type="RayCast2D" parent="Flippable"]
position = Vector2( 3, -10 )
enabled = true
cast_to = Vector2( 90, 0 )
collision_mask = 129

[node name="PressureArea" type="Area2D" parent="Flippable"]
collision_layer = 512
collision_mask = 0
script = ExtResource( 4 )
mainNodePath = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/PressureArea"]
position = Vector2( 0.391243, -1.57322 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/alarm = SubResource( 3 )
anims/carry = SubResource( 4 )
anims/drop = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/stand_up = SubResource( 7 )
anims/suspicious = SubResource( 8 )
anims/tasered = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="Notifier" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -32 )

[node name="CivilianDetect" type="Node" parent="."]
script = ExtResource( 5 )
guardPath = NodePath("..")

[node name="GroundDetection" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetection"]
position = Vector2( 0.198603, 0.270277 )
shape = SubResource( 11 )

[node name="Guard" type="Node2D" parent="."]

[node name="Alarm" type="AudioStreamPlayer2D" parent="Guard"]
attenuation = 2.0
bus = "Sound"

[node name="Suspicious" type="AudioStreamPlayer2D" parent="Guard"]
attenuation = 2.0
bus = "Sound"

[node name="DeskGuardDetect" type="AudioStreamPlayer2D" parent="Guard"]
stream = ExtResource( 7 )
attenuation = 2.0
bus = "Sound"

[node name="Footstep1" type="AudioStreamPlayer2D" parent="Guard"]
stream = ExtResource( 9 )
volume_db = -12.0
pitch_scale = 0.9
bus = "Sound"

[node name="Footstep2" type="AudioStreamPlayer2D" parent="Guard"]
stream = ExtResource( 8 )
volume_db = -12.0
pitch_scale = 0.8
bus = "Sound"

[node name="AudioListener" parent="." instance=ExtResource( 10 )]
audio_listener_x_size = 128

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_right = 40.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 11 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="StartDelay" to="." method="_on_StartDelay_timeout"]
[connection signal="timeout" from="SureDetectionTimer" to="." method="_on_SureDetectionTimer_timeout"]
[connection signal="timeout" from="StunDurationTimer" to="." method="_on_StunDurationTimer_timeout"]
[connection signal="timeout" from="GoBackToNormalAfterDetectTimer" to="." method="_on_GoBackToNormalAfterDetectTimer_timeout"]
[connection signal="body_entered" from="Flippable/LineOfSight" to="." method="_on_LineOfSight_body_entered"]
[connection signal="body_exited" from="Flippable/LineOfSight" to="." method="_on_LineOfSight_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="invoked" from="AudioListener" to="." method="_on_AudioListener_invoked"]
